# smart_sensor

./: .gitignore  CMakeLists.txt  LICENSE  README.md  prj.conf
src/: main.c
src/ble/: CMakeLists.txt  ble_service.c  ble_service.h
